<resources>
    <!-- Screening Questions -->
    <string-array name="procedureCategories">
        <item>Eye Test</item>
        <item>Teeth Cleaning</item>
        <item>Throat Inspection</item>
        <item>Mobility test</item>
    </string-array>

    <string-array name="sexes">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="schools">
        <item>Malibu High School</item>
        <item>Tuscany Glen Primary</item>
        <item>Forest Heights High</item>
        <item>Bergvliet High School</item>
        <item>Eerste River Primary</item>
        <item>Melton Rose Primary</item>
        <item>Western Cape Sports School</item>
        <item>DeKuilen High School</item>
    </string-array>

    <string-array name="eyeScreeningQuestions">
        <item name="q1.1">1.1. Do you experience blurry vision or have difficulty focusing on objects?</item>
        <item name="q1.2">1.2. Do you frequently experience eye strain or fatigue, especially after extended periods of reading or screen time?</item>
        <item name="q1.3">1.3. Do you wear any prescription spectacles or contacts?</item>
        <item name="q1.4">1.4. Are your eyes frequently itchy, irritated or red?</item>
        <item name="q1.5">1.5. Have you noticed any sudden flashes of light or floating spots (floaters) in your field of vision?</item>
    </string-array>

    <string-array name="earScreeningQuestions">
        <item name="q2.1">2.1. Do you experience frequent or recurring earaches or ear pain?</item>
        <item name="q2.2">2.2. Do you often experience ringing in your ears (tinnitus)?</item>
        <item name="q2.3">2.3. Have you undergone any ear surgeries or procedures in the past?</item>
        <item name="q2.4">2.4. Are you exposed to loud noises on a regular basis, either at work or during recreational activities?</item>
        <item name="q2.5">2.5. Have you noticed any discharge, odor, or itching in your ears?</item>
    </string-array>

    <string-array name="throatScreeningQuestions">
        <item name="q3.1">3.1. Have you experienced a persistent sore throat for more than two weeks?</item>
        <item name="q3.2">3.2. Do you frequently have difficulty swallowing or feel a sensation of something stuck in your throat?</item>
        <item name="q3.3">3.3. Have you noticed any unexplained changes in your voice, such as hoarseness or voice fatigue?</item>
        <item name="q3.4">3.4. Have you noticed any unusual lumps, bumps, or swelling in your neck or throat area?</item>
        <item name="q3.5">3.5. Do you experience recurrent or frequent throat infections?</item>
    </string-array>

    <string-array name="doctors">
        <item>Cibrian Hofsta (Optometrist)</item>
        <item>Aphiwe Meslane (Dentist)</item>
        <item>Aaron Fourie (General Practitioner)</item>
        <item>Gareth Meslane (Dentist)</item>
        <item>Luthando Magobongo (General Practitioner)</item>
    </string-array>


    <string name="find_learner">Find Learner</string>
    <string name="add_learner">Add Learner</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_example">kacey@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="save">Save</string>
    <string name="learner_details">Learner Details</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="school_drop_down">School drop down list</string>
    <string name="cancel">Cancel</string>
    <string name="_03_01_2001">03/01/2001</string>
    <string name="edit_procedure_description">Edit procedure description</string>
    <string name="date_performed">Date performed</string>
    <string name="edit_procedure">Edit Procedure</string>
    <string name="edit_the_procedure_performing_doctor">Edit the procedure performing doctor</string>
    <string name="edit_the_procedure_category_below">Edit the procedure category below</string>

</resources>