<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_background_img"
    tools:context=".LoginActivity">

    <!--Progressbar acts as a loading icon-->
    <ProgressBar
        android:id="@+id/loginPb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!--The scrollview allows the user to scroll to the next input field while the keyboard is open-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <!--Heading-->
            <TextView
                android:id="@+id/loginTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/my_app_on_surface"
                android:textSize="48sp"
                android:textStyle="bold" />

            <!--Email textBox-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTb"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/my_app_on_surface"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    style="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="@color/my_app_primary_dark" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Password textBox-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTb"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/my_app_on_surface"
                app:boxBackgroundMode="filled"
                app:endIconMode="password_toggle"
                app:passwordToggleTint="@color/my_app_primary">

                <com.google.android.material.textfield.TextInputEditText
                    style="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="@color/my_app_primary_dark" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Sign up button-->
            <Button
                android:id="@+id/signUpBtn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="viewStart"
                android:textColor="@color/my_app_on_surface"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!--Forgot password button-->
            <Button
                android:id="@+id/forgotPasswordBtn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/forgot_password"
                android:textAlignment="viewStart"
                android:textColor="@color/my_app_on_surface"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!--Login button-->
            <Button
                android:id="@+id/loginBtn"
                style="@android:style/Widget.Material.Button"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:elevation="5dp"
                android:text="@string/login"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>