<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_background_img"
    tools:context=".SignUpActivity">

    <!--Acts as a loading icon-->

    <!--The scrollview allows the user to scroll to the next input field while the keyboard is open-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/blank_square_background"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <!--Heading-->
            <TextView
                android:id="@+id/signupTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="48sp"
                android:textStyle="bold" />

            <!--Email textbox-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTb"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/green" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Password textbox-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTb"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                app:boxBackgroundMode="outline"
                app:boxCollapsedPaddingTop="0dp"
                app:boxStrokeColor="@color/green"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/green"
                app:passwordToggleTint="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/green" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Confirm password textbox-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTb"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/confirm_password"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/green"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/green"
                app:passwordToggleTint="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/green" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Sign in / Log in button-->
            <Button
                android:id="@+id/loginBtn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/already_have_an_account"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!--Register / Sign up button-->
            <Button
                android:id="@+id/signUpBtn"
                style="@android:style/Widget.Material.Button"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:elevation="5dp"
                android:text="@string/sign_up"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/signUpPb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>